--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,9 +13,12 @@ jobs:
   build:
     runs-on: [self-hosted, windows]
 
+    env:
+      DXVCL_RS29: 'C:\Program Files (x86)\DevExpress\VCL\Library\RS29\Win64'
+      
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v3        
 
       - name: Build project
         shell: cmd
