--- a/AlgorithmShowcase.dproj
+++ b/AlgorithmShowcase.dproj
@@ -4,7 +4,7 @@
         <ProjectVersion>20.3</ProjectVersion>
         <FrameworkType>VCL</FrameworkType>
         <Base>True</Base>
-        <Config Condition="'$(Config)'==''">Debug</Config>
+        <Config Condition="'$(Config)'==''">Release</Config>
         <Platform Condition="'$(Platform)'==''">Win64</Platform>
         <ProjectName Condition="'$(ProjectName)'==''">AlgorithmShowcase</ProjectName>
         <TargetedPlatforms>3</TargetedPlatforms>
@@ -141,6 +141,7 @@
         <DCCReference Include="src\Algorithms\uMergeSort.pas"/>
         <DCCReference Include="src\Algorithms\uHeapSort.pas"/>
         <DCCReference Include="src\Algorithms\uIntroSort.pas"/>
+        <DCCReference Include="src\Algorithms\uCountingSort.pas"/>
         <BuildConfiguration Include="Base">
             <Key>Base</Key>
         </BuildConfiguration>
@@ -169,9 +170,9 @@
                         <Overwrite>true</Overwrite>
                     </Platform>
                 </DeployFile>
-                <DeployFile LocalName="Win64\Debug\AlgorithmShowcase.rsm" Configuration="Debug" Class="DebugSymbols">
+                <DeployFile LocalName="Win64\Release\AlgorithmShowcase.exe" Configuration="Release" Class="ProjectOutput">
                     <Platform Name="Win64">
-                        <RemoteName>AlgorithmShowcase.rsm</RemoteName>
+                        <RemoteName>AlgorithmShowcase.exe</RemoteName>
                         <Overwrite>true</Overwrite>
                     </Platform>
                 </DeployFile>
