feature: add tim sort

--- a/AlgorithmShowcase.dproj
+++ b/AlgorithmShowcase.dproj
@@ -148,6 +148,7 @@
         <DCCReference Include="src\Algorithms\uCountingSort.pas"/>
         <DCCReference Include="src\Algorithms\uRadixSort.pas"/>
         <DCCReference Include="src\Algorithms\uBucketSort.pas"/>
+        <DCCReference Include="src\Algorithms\uTimSort.pas"/>
         <BuildConfiguration Include="Base">
             <Key>Base</Key>
         </BuildConfiguration>
