--- a/AlgorithmShowcase.dproj
+++ b/AlgorithmShowcase.dproj
@@ -150,6 +150,7 @@
         <DCCReference Include="src\Algorithms\uBucketSort.pas"/>
         <DCCReference Include="src\Algorithms\uTimSort.pas"/>
         <DCCReference Include="src\Algorithms\uDualPivotQuickSort.pas"/>
+        <DCCReference Include="src\Algorithms\uPDQSort.pas"/>
         <BuildConfiguration Include="Base">
             <Key>Base</Key>
         </BuildConfiguration>
