feature: add flash sort

--- a/AlgorithmShowcase.dproj
+++ b/AlgorithmShowcase.dproj
@@ -151,6 +151,7 @@
         <DCCReference Include="src\Algorithms\uTimSort.pas"/>
         <DCCReference Include="src\Algorithms\uDualPivotQuickSort.pas"/>
         <DCCReference Include="src\Algorithms\uPDQSort.pas"/>
+        <DCCReference Include="src\Algorithms\uFlashSort.pas"/>
         <BuildConfiguration Include="Base">
             <Key>Base</Key>
         </BuildConfiguration>
